- patches.drivers/qlge-0001-Use-the-instance-of-net_device_stats-from-net_.patch:   qlge: Use the instance of net_device_stats from   net_device. (bnc#560420, FATE#307130). - patches.drivers/qlge-0002-Remove-explicit-setting-of-PCI-Dev-CTL-reg.patch:   qlge: Remove explicit setting of PCI Dev CTL reg. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0003-Set-PCIE-max-read-request-size.patch:   qlge: Set PCIE max read request size. (bnc#560420, FATE#307130). - patches.drivers/qlge-0004-Add-handler-for-DCBX-firmware-event.patch:   qlge: Add handler for DCBX firmware event. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0005-Store-firmware-revision-as-early-as-possible.patch:   qlge: Store firmware revision as early as possible. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0006-Remove-inline-math-for-small-rx-buf-mapping.patch:   qlge: Remove inline math for small rx buf mapping. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0007-Get-rid-of-firmware-handler-debug-code.patch:   qlge: Get rid of firmware handler debug code. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0008-Don-t-fail-open-when-port-is-not-initialized.patch:   qlge: Don't fail open when port is not initialized. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0009-Add-CBFC-pause-frame-counters-to-ethtool-stats.patch:   qlge: Add CBFC pause frame counters to ethtool   stats. (bnc#560420, FATE#307130). - patches.drivers/qlge-0010-Size-RX-buffers-based-on-MTU.patch:   qlge: Size RX buffers based on MTU. (bnc#560420, FATE#307130). - patches.drivers/qlge-0011-Add-ethtool-get-set-pause-parameter.patch:   qlge: Add ethtool get/set pause parameter. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0012-Add-ethtool-blink-function.patch:   qlge: Add ethtool blink function. (bnc#560420, FATE#307130). - patches.drivers/qlge-0013-Add-ethtool-wake-on-LAN-function.patch:   qlge: Add ethtool wake on LAN function. (bnc#560420,   FATE#307130). - patches.drivers/qlge-0014-Add-ethtool-registe

--- a/series.conf
+++ b/series.conf
@@ -676,6 +676,33 @@
 	patches.suse/libfcoe-do-not-pad-fip-keep-alive-to-full-frame-size.patch
 	patches.suse/libfc-fcoe-increase-els-and-ct-timeouts.patch
 
+	# qlge patches from 2.6.33 bnc#560420, fate#307130
+	patches.drivers/qlge-0001-Use-the-instance-of-net_device_stats-from-net_.patch
+	patches.drivers/qlge-0002-Remove-explicit-setting-of-PCI-Dev-CTL-reg.patch
+	patches.drivers/qlge-0003-Set-PCIE-max-read-request-size.patch
+	patches.drivers/qlge-0004-Add-handler-for-DCBX-firmware-event.patch
+	patches.drivers/qlge-0005-Store-firmware-revision-as-early-as-possible.patch
+	patches.drivers/qlge-0006-Remove-inline-math-for-small-rx-buf-mapping.patch
+	patches.drivers/qlge-0007-Get-rid-of-firmware-handler-debug-code.patch
+	patches.drivers/qlge-0008-Don-t-fail-open-when-port-is-not-initialized.patch
+	patches.drivers/qlge-0009-Add-CBFC-pause-frame-counters-to-ethtool-stats.patch
+	patches.drivers/qlge-0010-Size-RX-buffers-based-on-MTU.patch
+	patches.drivers/qlge-0011-Add-ethtool-get-set-pause-parameter.patch
+	patches.drivers/qlge-0012-Add-ethtool-blink-function.patch
+	patches.drivers/qlge-0013-Add-ethtool-wake-on-LAN-function.patch
+	patches.drivers/qlge-0014-Add-ethtool-register-dump-function.patch
+	patches.drivers/qlge-0015-Add-ethtool-self-test.patch
+	patches.drivers/qlge-0016-Change-naming-on-vlan-API.patch
+	patches.drivers/qlge-0017-Fix-indentations.patch
+	patches.drivers/qlge-0018-Add-firmware-driver-sub-command-support.patch
+	patches.drivers/qlge-0019-Clean-up-netdev-stats-usage.patch
+	patches.drivers/qlge-0020-Do-not-change-frame-routing-during-suspend.patch
+	patches.drivers/qlge-0021-Add-asic-reset-to-open-call.patch
+	patches.drivers/qlge-0022-Clean-up-module-parameter-name.patch
+	patches.drivers/qlge-0023-Change-version-to-v1.00.00.23.00.00-01.patch
+	patches.drivers/qlge-0024-Bonding-fix-for-mode-6.patch
+	patches.drivers/qlge-0025-Add-performance-change-for-non-split-headers.patch
+	patches.drivers/qlge-0026-Add-firmware-core-dump.patch
 
 	########################################################
 	# Wireless Networking
