- rpm/kernel-binary.spec.in: Fix vmlinux stripping on power   (bnc#559547)

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -359,39 +359,41 @@ mkdir -p %buildroot/boot
 # (Could strip out non-public symbols.)
 cp -p System.map %buildroot/boot/System.map-%kernelrelease-%build_flavor
 
-%define extract_vmlinux_debuginfo 0
-%if 0%{?__debug_package:1}
-%ifnarch ppc ppc64
-%define extract_vmlinux_debuginfo 1
-%endif
-%endif
-
 add_vmlinux()
 {
-    local vmlinux=boot/vmlinux-%kernelrelease-%build_flavor
-%if %extract_vmlinux_debuginfo
-    local vmlinux_debug=usr/lib/debug/$vmlinux.debug
-    mkdir -p $(dirname %buildroot/$vmlinux_debug)
+    local vmlinux=boot/vmlinux-%kernelrelease-%build_flavor compressed=false
+
+    if test $1 == "--compressed"; then
+        compressed=true
+    fi
     cp vmlinux %buildroot/$vmlinux
-    /usr/lib/rpm/debugedit -b $RPM_BUILD_DIR -d /usr/src/debug \
-			   -l vmlinux.sourcefiles %buildroot/$vmlinux
-    # FIXME: create and package build-id symlinks
-    objcopy --only-keep-debug \
-	    %buildroot/$vmlinux \
-	    %buildroot/$vmlinux_debug || :
-    objcopy --add-gnu-debuglink=%buildroot/$vmlinux_debug \
-	    --strip-debug \
-	    %buildroot/$vmlinux || :
-    mkdir -p %buildroot/usr/src/debug
-    LANG=C sort -z -u vmlinux.sourcefiles | grep -Ezv "<(built-in|stdin)>" \
-	| ( cd %_builddir && cpio -pd0m %buildroot/usr/src/debug )
-    find %buildroot/usr/src/debug -type d -print0 | xargs -0 -r chmod 0755
-    find %buildroot/usr/src/debug -type f -print0 | xargs -0 -r chmod 0644
-    echo -e "%%defattr(-, root, root)\\n/$vmlinux_debug" >%my_builddir/vmlinux.debug.files
-%else
-    cp vmlinux %buildroot/$vmlinux
+    >%my_builddir/vmlinux.debug.files
+%if 0%{?__debug_package:1}
+    if $compressed; then
+        local vmlinux_debug=usr/lib/debug/$vmlinux.debug
+        mkdir -p $(dirname %buildroot/$vmlinux_debug)
+        /usr/lib/rpm/debugedit -b $RPM_BUILD_DIR -d /usr/src/debug \
+    			   -l vmlinux.sourcefiles %buildroot/$vmlinux
+        # FIXME: create and package build-id symlinks
+        objcopy --only-keep-debug \
+    	    %buildroot/$vmlinux \
+    	    %buildroot/$vmlinux_debug || :
+        objcopy --add-gnu-debuglink=%buildroot/$vmlinux_debug \
+    	    --strip-debug \
+    	    %buildroot/$vmlinux || :
+        mkdir -p %buildroot/usr/src/debug
+        LANG=C sort -z -u vmlinux.sourcefiles | grep -Ezv "<(built-in|stdin)>" \
+    	| ( cd %_builddir && cpio -pd0m %buildroot/usr/src/debug )
+        find %buildroot/usr/src/debug -type d -print0 | xargs -0 -r chmod 0755
+        find %buildroot/usr/src/debug -type f -print0 | xargs -0 -r chmod 0644
+        echo -e "%%defattr(-, root, root)\\n/$vmlinux_debug" >%my_builddir/vmlinux.debug.files
+    else
+        # make vmlinux executable so that find-debuginfo.sh picks it up
+        # (TODO: fix find-debuginfo.sh instead)
+        chmod +x %buildroot/$vmlinux
+    fi
 %endif
-    if [ "$1" = --compressed ]; then
+    if $compressed; then
 	gzip -9 %buildroot/$vmlinux
         chmod a-x %buildroot/$vmlinux.gz
     fi
@@ -399,7 +401,6 @@ add_vmlinux()
 
 %if %build_kdump
     add_vmlinux
-    chmod 644 %buildroot/boot/vmlinux-%kernelrelease-%build_flavor
     image=vmlinux
 %else
 
@@ -421,7 +422,6 @@ add_vmlinux()
 %endif
 %ifarch ppc ppc64
     add_vmlinux
-    chmod 644 %buildroot/boot/vmlinux-%kernelrelease-%build_flavor
     image=vmlinux
 %endif
 %ifarch ia64
@@ -612,13 +612,13 @@ add_dirs_to_filelist() {
         # print file name
         p
         # remove filelist macros
-        s:%%%%[a-z]+(\([^)]+\))? ?::g
-        # add %%%%dir prefix
-        s:^:%%%%dir :
+        s:%%[a-z]+(\([^)]+\))? ?::g
+        # add %%dir prefix
+        s:^:%%dir :
         # print all parents
         :a
             # skip directories owned by other packages
-            s:^%%%%dir (/boot|/etc|/lib/(modules|firmware)|/usr/src)/[^/]+$::
+            s:^%%dir (/boot|/etc|/lib/(modules|firmware)|/usr/src)/[^/]+$::
             s:/[^/]+$::p
         ta
     ' "$@" | sort -u
@@ -635,29 +635,30 @@ done
 
 {   cd %buildroot
     find boot \
-	\( -type l -o -name 'initrd-*' \) -printf '%%%%%%%%ghost /%%p\n' -o \
+	\( -type l -o -name 'initrd-*' \) -printf '%%%%ghost /%%p\n' -o \
+	-type f -name 'vmlinux-*' -printf '%%%%attr(0644, root, root) /%%p\n' -o \
         -type f -printf '/%%p\n'
 
     # Add the auto-generated (by mkdumprd) kdump initrd to %ghost so that
     # the file gets removed when uninstalling the kernel.
-    echo '%%%%ghost /boot/initrd-%kernelrelease-kdump'
+    echo '%%ghost /boot/initrd-%kernelrelease-kdump'
     touch $RPM_BUILD_ROOT/boot/initrd-%kernelrelease-kdump
 
     if [ %CONFIG_MODULES = y ]; then
 	find lib/modules/%kernelrelease-%build_flavor \
 	    -type d -o \
 	    \( -path '*/modules.*' ! -path '*/modules.order' \
-	     ! -path '*/modules.builtin' \) -printf '%%%%%%%%ghost /%%p\n' \
+	     ! -path '*/modules.builtin' \) -printf '%%%%ghost /%%p\n' \
 	       -o -name '*.ko' -prune -o -printf '/%%p\n'
 	cat %my_builddir/base-modules
-	echo '%%%%config /etc/modprobe.d/generic_serial-blacklist'
+	echo '%%config /etc/modprobe.d/generic_serial-blacklist'
     fi
     test -d lib/firmware/%kernelrelease-%build_flavor && \
     find lib/firmware/%kernelrelease-%build_flavor \
 	-type d -o \
 	-printf '/%%p\n'
     if [ -e .%_docdir/%name ]; then
-	echo "%%%%doc %_docdir/%name"
+	echo "%%doc %_docdir/%name"
     fi
 } | sort -u >%my_builddir/tmp
 cat %my_builddir/tmp %my_builddir/kernel-devel.files | sort | uniq -u | \
@@ -818,8 +819,6 @@ Debug information for package %name-devel
 
 %source_timestamp
 
-%if %extract_vmlinux_debuginfo
 %files devel-debuginfo -f vmlinux.debug.files
-%endif
 
 %changelog
