- patches.suse/kdb-usb-rework: kdb: Cleanup KDB_USB.

--- a/series.conf
+++ b/series.conf
@@ -906,6 +906,7 @@
 	patches.suse/kdb-build-fixes
 	patches.suse/kdb-x86-build-fixes
 	patches.suse/kdb_x86_fix_hang.patch
+	patches.suse/kdb-usb-rework
 
         ########################################################
         # Other patches for debugging
