- patches.drivers/alsa-sp1-hda-23-hp-mute-led-gpio-fixes:   ALSA: hda - Fix LED GPIO setup for HP laptops with IDT codecs   (bnc#547357,bnc#523487).

--- a/series.conf
+++ b/series.conf
@@ -799,6 +799,7 @@
 	patches.drivers/alsa-sp1-hda-20-fsc-amilo-pi1505-fix
 	patches.drivers/alsa-sp1-hda-21-hp-dv3-position-fix-quirk
 	patches.drivers/alsa-sp1-hda-22-alc888-exclude-unusable-adcs
+	patches.drivers/alsa-sp1-hda-23-hp-mute-led-gpio-fixes
 
 	########################################################
 	# Other driver fixes
