- needs_update: Merge or delete remaining patches. - patches.fixes/scsi-dh-emc-mode-select-10-size: DM-MPIO fails   to tresspass LUNs on CLARiiON arrays (bnc#484529). - patches.fixes/scsi-dh-emc-rw-mismatch: Server crashes when   path failures occur against EMC storage (bnc#474482). - patches.fixes/scsi-dh-rdac-add-stk: STK arrays missing from   rdac devicehandler (bnc#503855). - patches.fixes/scsi-retry-alua-transition-in-progress: I/O   errors for ALUA state transitions (bnc#491289). - patches.suse/dm-mpath-no-activate-for-offlined-paths: DM-MPIO   fails to tresspass LUNs on CLARiiON arrays (bnc#484529). - patches.suse/dm-mpath-no-partitions-feature: Disable partitions   scan for multipathed devices (bnc#402922,bnc#514767).

--- a/series.conf
+++ b/series.conf
@@ -552,6 +552,10 @@
 	patches.fixes/scsi_dh-make-hp_sw-handler-asynchronous
 	patches.fixes/scsi_dh-make-alua-handler-asynchronous
 	patches.fixes/scsi_dh-always-attach-sysfs
+	patches.fixes/scsi-dh-emc-mode-select-10-size
+	patches.fixes/scsi-dh-emc-rw-mismatch
+	patches.fixes/scsi-dh-rdac-add-stk
+	patches.fixes/scsi-retry-alua-transition-in-progress
 
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/aacraid-24701-update
@@ -837,6 +841,8 @@
 	patches.fixes/dm-table-switch-to-readonly
 	patches.suse/dm-mpath-evaluate-request-result-and-sense
 	patches.fixes/dm-release-map_lock-before-set_disk_ro
+	patches.suse/dm-mpath-no-activate-for-offlined-paths
+	patches.suse/dm-mpath-no-partitions-feature
 
 	########################################################
 	# md
