Updated MCE/MCA patches from Andi -> delete the old ones:
- patches.arch/x86_mce_hwpoison-action_result-valid-pfn.patch:
  HWPOISON: return ENXIO on invalid page number (fate#307738).
- patches.arch/x86_mce_hwpoison-is-free-page.patch: HWPOISON:
  detect free buddy pages explicitly (fate#307738).
- patches.arch/x86_mce_hwpoison-no-double-ref.patch: HWPOISON:
  avoid grabbing the page count multiple times during madvise
  injection (fate#307738).
- patches.arch/x86_mce_madvise-locking: HWPOISON: Use
  get_user_page_fast in hwpoison madvise (fate#307738).
- patches.arch/x86_mce_nfs-mig2: NFS: Fix nfs_migrate_page()
  (fate#307738).
- patches.arch/x86_mce_offline-inject: HWPOISON: Add a madvise()
  injector for soft page offlining (fate#307738).
- patches.arch/x86_mce_page-offline: HWPOISON: Add soft page
  offline support (fate#307738).
- patches.arch/x86_mce_ref-to-flags: HWPOISON: Turn ref argument
  into flags argument (fate#307738).
- patches.arch/x86_mce_shake-page: HWPOISON: Be more aggressive
  at freeing non LRU caches (fate#307738).
- patches.arch/x86_mce_undef-lru: HWPOISON: Undefine short-hand
  macros after use to avoid namespace conflict (fate#307738).
- patches.arch/x86_mce_lru_cleanup.patch: Delete.
- patches.arch/x86_mce_page_offlining.patch: Delete.
- patches.arch/x86_mce_page_offlining_test_ability.patch: Delete.
- patches.arch/x86_mce_test_page.patch: Delete.

--- a/series.conf
+++ b/series.conf
@@ -184,10 +184,16 @@
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
         ########################################################
-	patches.arch/x86_mce_page_offlining.patch
-	patches.arch/x86_mce_lru_cleanup.patch
-	patches.arch/x86_mce_test_page.patch
-	patches.arch/x86_mce_page_offlining_test_ability.patch
+	patches.arch/x86_mce_undef-lru
+	patches.arch/x86_mce_shake-page
+	patches.arch/x86_mce_hwpoison-action_result-valid-pfn.patch
+	patches.arch/x86_mce_hwpoison-no-double-ref.patch
+	patches.arch/x86_mce_ref-to-flags
+	patches.arch/x86_mce_hwpoison-is-free-page.patch
+	patches.arch/x86_mce_offline-inject
+	patches.arch/x86_mce_madvise-locking
+	patches.arch/x86_mce_page-offline
+	patches.arch/x86_mce_nfs-mig2
 
 	########################################################
 	# x86_64/4096CPUS - from SGI
