- patches.suse/kdb_fix_ia64_build.patch: Fix ia64 - Export   kdb_usb_kbds (none).

--- a/series.conf
+++ b/series.conf
@@ -919,6 +919,7 @@
 	patches.suse/kdb-build-fixes
 	patches.suse/kdb-x86-build-fixes
 	patches.suse/kdb-usb-rework
+	patches.suse/kdb_fix_ia64_build.patch
 
         ########################################################
         # Other patches for debugging
