- Moved kernel-docs into the git repo. It is now built automatically   with the matching kernel sources.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -77,12 +77,13 @@ Source52:       kernel-source%variant.changes
 Source53:       kernel-source.spec.in
 Source54:       kernel-binary.spec.in
 Source55:       kernel-syms.spec.in
-Source56:       config.sh
-Source57:       compute-PATCHVERSION.sh
-Source58:       old-packages.conf
-Source59:       arch-symbols
-Source60:       package-descriptions
-Source61:	kernel-spec-macros
+Source56:       kernel-docs.spec.in
+Source60:       config.sh
+Source61:       compute-PATCHVERSION.sh
+Source62:       old-packages.conf
+Source63:       arch-symbols
+Source64:       package-descriptions
+Source65:       kernel-spec-macros
 Source100:      config.tar.bz2
 Source101:      patches.arch.tar.bz2
 Source102:      patches.drivers.tar.bz2
