- patches.fixes/bug-562290-Fix-isolcpus-boot-option.patch: sched:   Fix isolcpus boot option (bnc#562290, fate#306952).

--- a/series.conf
+++ b/series.conf
@@ -98,6 +98,7 @@
 	patches.suse/setuid-dumpable-wrongdir
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
+	patches.fixes/bug-562290-Fix-isolcpus-boot-option.patch
 
 	# writable limits
 	patches.suse/rlim-0001-SECURITY-selinux-fix-update_rlimit_cpu-parameter.patch
