- patches.fixes/uart-txen-race.patch: Serial: Do not read IIR in   serial8250_start_tx when UART_BUG_TXEN (bnc#479304 bnc#509066).

--- a/series.conf
+++ b/series.conf
@@ -827,6 +827,7 @@
 	patches.suse/no-partition-scan
 
 	patches.fixes/enclosure-fix-oops-while-iterating-enclosure_status-array
+	patches.fixes/uart-txen-race.patch
 
 	########################################################
 	# Other drivers we have added to the tree
