--- a/series.conf
+++ b/series.conf
@@ -99,6 +99,7 @@
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
 	patches.fixes/bug-562290-Fix-isolcpus-boot-option.patch
+	patches.suse/sched-revert-latency-defaults
 
 	# writable limits
 	patches.suse/rlim-0001-SECURITY-selinux-fix-update_rlimit_cpu-parameter.patch
