- patches.drivers/dcb-data-center-bridging-ops-s: dcb: data   center bridging ops should be r/o (BNC#562046). - patches.drivers/drivers-net-request_irq-remove: drivers/net:   request_irq - Remove unnecessary leading & from second arg   (BNC#562046). - patches.drivers/ethtool-add-direct-attach-supp: ethtool: Add   Direct Attach support to connector port reporting (BNC#562046). - patches.drivers/ixgbe-add-support-for-82599-al: ixgbe: Add   support for 82599 alternative WWNN/WWPN prefix (BNC#562046). - patches.drivers/ixgbe-add-support-for-82599-ba: ixgbe: add   support for 82599 based Express Module X520-P2 (BNC#562046). - patches.drivers/ixgbe-add-support-for-netdev_o: ixgbe: Add   support for netdev_ops.ndo_fcoe_get_wwn to 82599 (BNC#562046). - patches.drivers/ixgbe-change-default-ring-size: ixgbe: change   default ring size (BNC#562046). - patches.drivers/ixgbe-disable-flow-control-for: ixgbe: Disable   Flow Control for certain devices (BNC#562046). - patches.drivers/ixgbe-display-currently-attach: ixgbe: Display   currently attached PHY through ethtool (BNC#562046). - patches.drivers/ixgbe-fix-erroneous-display-of: ixgbe: Fix   erroneous display of stats by ethtool -S (BNC#562046). - patches.drivers/ixgbe-fix-kr-to-kx-fail-over-f: ixgbe: Fix KR   to KX fail over for Mezzanine cards (BNC#562046). - patches.drivers/ixgbe-fix-receive-address-regi: ixgbe:   Fix Receive Address Register (RAR) cleaning and accounting   (BNC#562046). - patches.drivers/ixgbe-flush-the-lsc-mask-chang: ixgbe: Flush   the LSC mask change to prevent repeated interrupts (BNC#562046). - patches.drivers/ixgbe-handle-parameters-for-tx: ixgbe: handle   parameters for tx and rx EITR, no div0 (BNC#562046). - patches.drivers/ixgbe-links2-is-not-a-valid-re: ixgbe: LINKS2   is not a valid register for 82598 (BNC#562046). - patches.drivers/ixgbe-make-queue-pairs-on-sing: ixgbe: Make   queue pairs on single MSI-X interrupts (BNC#562046). - patches.drivers/ixgbe-modify-82599-hwrsc-stati: ixgbe: Modify   8

--- a/series.conf
+++ b/series.conf
@@ -742,6 +742,49 @@
 	patches.drivers/netxen-0021-fix-debug-tools-access-for-NX2031.patch
 	patches.drivers/netxen-0022-fix-failure-cases-for-fw-hang-recovery.patch
 
+	# fcoe patches from 2.6.33 bnc#562046
+	patches.fixes/libfc-fix-payload-size-pa
+	patches.fixes/fcoe-allow-scsi-fcp-to-be
+	patches.fixes/libfc-add-fc-bb-5-lesb-co
+	patches.fixes/libfcoe-add-checking-disa
+	patches.fixes/libfcoe-add-tracking-fip--0
+	patches.fixes/libfcoe-add-tracking-fip-
+	patches.fixes/libfc-add-fcoe_fc_els_les
+	patches.fixes/fcoe-libfc-add-get_lesb-t
+	patches.fixes/libfc-add-support-of-rece
+	patches.fixes/libfc-add-target-reset-fl
+
+	# ixgbe patches from 2.6.33 bnc#562046
+	patches.drivers/dcb-data-center-bridging-ops-s
+	patches.drivers/ixgbe-use-the-instance-of-net_
+	patches.drivers/ixgbe-add-support-for-82599-ba
+	patches.drivers/ixgbe-fix-kr-to-kx-fail-over-f
+	patches.drivers/net-add-netdev_alloc_skb_ip_al
+	patches.drivers/net-use-netdev_alloc_skb_ip_al
+	patches.drivers/ixgbe-fix-erroneous-display-of
+	patches.drivers/ixgbe-add-support-for-82599-al
+	patches.drivers/net-add-ndo_fcoe_get_wwn-to-ne
+	patches.drivers/ixgbe-add-support-for-netdev_o
+	patches.drivers/vlan-add-support-to-netdev_ops
+	patches.drivers/ixgbe-r_idx-not-used-in-ixgbe_
+	patches.drivers/ixgbe-flush-the-lsc-mask-chang
+	patches.drivers/ixgbe-make-queue-pairs-on-sing
+	patches.drivers/drivers-net-request_irq-remove
+	patches.drivers/ixgbe-modify-82599-hwrsc-stati
+	patches.drivers/ixgbe-use-rx-buffer-length-fro
+	patches.drivers/ixgbe-only-set-clear-vfe-in-ix
+	patches.drivers/ixgbe-handle-parameters-for-tx
+	patches.drivers/ixgbe-disable-flow-control-for
+	patches.drivers/ixgbe-links2-is-not-a-valid-re
+	patches.drivers/ixgbe-fix-receive-address-regi
+	patches.drivers/ethtool-add-direct-attach-supp
+	patches.drivers/ixgbe-display-currently-attach
+	patches.drivers/ixgbe-use-known-user-priority-
+	patches.drivers/ixgbe-select-fcoe-tx-queue-in-
+	patches.drivers/ixgbe-change-default-ring-size
+	patches.drivers/ixgbe-performance-tweaks
+	patches.drivers/ixgbe-use-eiam-to-automask-msi
+
 	########################################################
 	# Wireless Networking
 	########################################################
