--- a/series.conf
+++ b/series.conf
@@ -204,6 +204,21 @@
 	########################################################
 	patches.arch/x86-apic-force-bigsmp-apic-on-IBM-EXA3-4.patch
 
+	########################################################
+	# x86 UV patches from SGI
+	########################################################
+	patches.arch/bug-561933_uv_pat_is_gru_range.patch
+	patches.arch/bug-561939_uv_bios_call_hwperf.patch
+	patches.arch/bug-561939_bau_data_config.patch
+	patches.arch/bug-561939_uv_gpa_to_soc_phys_ram.patch
+	patches.arch/bug-561939_uv_gpa_is_mmr_space.patch
+	patches.arch/bug-561939_uv_rtc_fixes.patch
+	patches.arch/bug-561939_uv_rtc_setup_evt.patch
+	patches.arch/bug-561939_uv_rtc_cleanup.patch
+	patches.arch/bug-561939_uv_ipi_macro.patch
+	patches.arch/bug-561939_uv_mmap_low.patch
+	patches.arch/bug-564471_x86_Fix_duplicated_UV_BAU_interrupt_vector.patch
+
         ########################################################
 	# powerpc/generic
         ########################################################
