- patches.fixes/sched-recalculate-tunables-on-hot-add-remove:   sched: Fix missing sched tunable recalculation on cpu add/remove   (bnc#560317). - patches.fixes/sched-make-tunable-scaling-configurable: sched:   Make tunable scaling style configurable (bnc#560317). - patches.fixes/sched-sysctl-for-normalized-tunables:  sched:   Update normalized values on user updates via proc (bnc#560317).

--- a/series.conf
+++ b/series.conf
@@ -101,6 +101,10 @@
 	patches.suse/hung_task_timeout-configurable-default
 	patches.fixes/bug-562290-Fix-isolcpus-boot-option.patch
 	patches.suse/sched-revert-latency-defaults
+	# bnc#560317
+	patches.fixes/sched-recalculate-tunables-on-hot-add-remove
+	patches.fixes/sched-make-tunable-scaling-configurable
+	patches.fixes/sched-sysctl-for-normalized-tunables
 
 	# writable limits
 	patches.suse/rlim-0001-SECURITY-selinux-fix-update_rlimit_cpu-parameter.patch
