--- a/series.conf
+++ b/series.conf
@@ -188,6 +188,7 @@
 	patches.arch/x86-64-preserve-large-page-mapping-for-1st-2mb-kernel-txt-with-config_debug_rodata
 	patches.arch/x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata
 	patches.arch/x86-64-add-comment-for-rodata-large-page-retainment
+	patches.suse/x86-mark_rodata_rw.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
