- needs_update: - patches.fixes/aggressive-zone-reclaim.patch: be more aggressive   with zone reclaims (bnc#476525).

--- a/series.conf
+++ b/series.conf
@@ -334,6 +334,8 @@
 	patches.suse/mm-vmalloc-fail-dump-stack.patch
 	patches.suse/mm-devzero-optimisation.patch
 
+	patches.fixes/aggressive-zone-reclaim.patch
+
         ########################################################
         # IPC patches
         ########################################################
