--- a/series.conf
+++ b/series.conf
@@ -372,6 +372,7 @@
 +trenn	patches.suse/acpi-dsdt-initrd-v0.9a-2.6.25.patch
 	patches.suse/init-move-populate_rootfs-back-to-start_kernel
 	patches.suse/acpi-generic-initramfs-table-override-support
+	patches.fixes/acpi-fix-build-when-config_acpi_custom_override_initramfs-is-not-defined
 
 	patches.arch/acpi_thermal_passive_blacklist.patch
 	patches.arch/acpi-export-hotplug_execute
