- patches.fixes/fc-transport-remove-BUG_ON: scsi_transport_fc:   remove invalid BUG_ON (bnc#564479). - patches.fixes/lpfc-ia64-hang: lpfc: fix hang on SGI ia64   platform (bnc#564479). - patches.fixes/qla2xxx-dpc-thread-can-execute-before-scsi-host:   qla2xxx: dpc thread can execute before scsi host has been added   (bnc#564479). - patches.suse/fc-transport-allow-dev_loss_tmo-disable: Remove   capping from dev_loss_tmo (bnc#492469).

--- a/series.conf
+++ b/series.conf
@@ -607,6 +607,10 @@
 	patches.fixes/scsi-dh-emc-rw-mismatch
 	patches.fixes/scsi-dh-rdac-add-stk
 	patches.fixes/scsi-retry-alua-transition-in-progress
+	patches.fixes/fc-transport-remove-BUG_ON
+	patches.fixes/qla2xxx-dpc-thread-can-execute-before-scsi-host
+	patches.fixes/lpfc-ia64-hang
+	patches.suse/fc-transport-allow-dev_loss_tmo-disable
 
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/aacraid-24701-update
