- patches.fixes/powerpc-fix-cpu-name-in-show-cpuinfo: powerpc:   fix cpu name in show-cpuinfo (bnc#565267).

--- a/series.conf
+++ b/series.conf
@@ -265,6 +265,7 @@
 	patches.arch/ppc-extended_h_cede-add_offline_states
 	patches.arch/ppc-extended_h_cede-node_offline_online_cpus
 	patches.arch/ppc-extended_h_cede-add_driver_lock
+	patches.fixes/powerpc-fix-cpu-name-in-show-cpuinfo
 
         ########################################################
         # PS3
