- patches.suse/s390-Kerntypes.diff: S390: Generate Kerntypes file. - rpm/kernel-binary.spec.in: install /boot/Kerntypes-$version.

--- a/series.conf
+++ b/series.conf
@@ -312,6 +312,8 @@
 	patches.arch/s390-04-18-cio-fix-memleak-chk-dev.patch
 	patches.arch/s390-04-19-cio-fix-deact-dev-panic.patch
 
+	patches.suse/s390-Kerntypes.diff
+
         ########################################################
         # VM/FS patches
         ########################################################
