--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -91,9 +91,6 @@ Requires(post): mkinitrd
 # arch/ia64/scripts/unwcheck.py
 BuildRequires:  python
 %endif
-%ifarch s390 s390x
-BuildRequires:  dwarfextract
-%endif
 %if %build_xen
 %ifarch %ix86
 %if %build_flavor != "ec2"
@@ -434,9 +431,7 @@ add_vmlinux()
     add_vmlinux --compressed
     cp -p arch/s390/boot/image %buildroot/boot/image-%kernelrelease-%build_flavor
     image=image
-    if [ -x "$(which dwarfextract 2>/dev/null)" ] ; then
-	dwarfextract vmlinux %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor || echo "dwarfextract failed ($?)"
-    fi
+    cp -p arch/s390/boot/kerntypes.o %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor
 %if %CONFIG_KMSG_IDS == "y"
     mkdir -p %buildroot/usr/share/man/man9
     find man -name '*.9' -exec install -m 644 -D '{}' %buildroot/usr/share/man/man9/ ';'
@@ -505,14 +500,6 @@ if [ %CONFIG_MODULES = y ]; then
 %endif
 	echo "Consistency check error: please update supported.conf."
     fi
-
-%ifarch s390 s390x
-    if [ -x "$(which dwarfextract 2>/dev/null)" -a \
-	-f %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor ] ; then
-	find %buildroot -name "*.ko" > kofiles.list
-	dwarfextract %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor -C kofiles.list || echo "dwarfextract failed ($?)"
-    fi
-%endif
 
     # Also put the resulting file in %rpm_install_dir/%cpu_arch/%build_flavor
     # so that kernel-source + kernel-%build_flavor is sufficient for building
