- patches.xen/xen-fix-compilation-after-rename_generic_int.patch:   XEN: Fix compilation after renaming of generic_irqs.

--- a/series.conf
+++ b/series.conf
@@ -1234,3 +1234,6 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-nx-user-mappings
+
+	patches.xen/xen-fix-compilation-after-rename_generic_int.patch
+
