- patches.fixes/md-start_ro-fix: md: fix small irregularity with   start_ro module parameter (bnc#565219).

--- a/series.conf
+++ b/series.conf
@@ -954,6 +954,7 @@
 	# md
 	########################################################
 
+	patches.fixes/md-start_ro-fix
 	patches.drivers/8250_pnp-wacom-add
 
 	##########################################################
