- rpm/kernel-binary.spec.in: Fix generating /boot/Kerntypes* for   s390/vanilla.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -91,6 +91,11 @@ Requires(post): mkinitrd
 # arch/ia64/scripts/unwcheck.py
 BuildRequires:  python
 %endif
+%ifarch s390 s390x
+%if %build_vanilla
+BuildRequires:  dwarfextract
+%endif
+%endif
 %if %build_xen
 %ifarch %ix86
 %if %build_flavor != "ec2"
@@ -431,15 +436,16 @@ add_vmlinux()
     add_vmlinux --compressed
     cp -p arch/s390/boot/image %buildroot/boot/image-%kernelrelease-%build_flavor
     image=image
-    cp -p arch/s390/boot/kerntypes.o %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor
+    if test -e arch/s390/boot/kerntypes.o; then
+        cp -p arch/s390/boot/kerntypes.o %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor
+    elif test -x "$(which dwarfextract 2>/dev/null)"; then
+	dwarfextract vmlinux %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor || echo "dwarfextract failed ($?)"
+    fi
 %if %CONFIG_KMSG_IDS == "y"
     mkdir -p %buildroot/usr/share/man/man9
     find man -name '*.9' -exec install -m 644 -D '{}' %buildroot/usr/share/man/man9/ ';'
 %endif
 %endif
-    if [ -e init/kerntypes.o ]; then
-	cp init/kerntypes.o %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor
-    fi
 
 # end of build_kdump
 %endif
@@ -500,6 +506,16 @@ if [ %CONFIG_MODULES = y ]; then
 %endif
 	echo "Consistency check error: please update supported.conf."
     fi
+
+%ifarch s390 s390x
+    if test -e arch/s390/boot/kerntypes.o; then
+        :
+    elif test -x "$(which dwarfextract 2>/dev/null)" -a \
+	-f %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor; then
+	find %buildroot -name "*.ko" > kofiles.list
+	dwarfextract %buildroot/boot/Kerntypes-%kernelrelease-%build_flavor -C kofiles.list || echo "dwarfextract failed ($?)"
+    fi
+%endif
 
     # Also put the resulting file in %rpm_install_dir/%cpu_arch/%build_flavor
     # so that kernel-source + kernel-%build_flavor is sufficient for building
