- patches.arch/s390-05-01-netiucv-tx-bytes.patch: netiucv:   displayed TX bytes value much too high (BNC#565612). - patches.arch/s390-05-02-cmm-suspend.patch: cmm: free pages on   hibernate. (BNC#565612). - patches.arch/s390-05-03-iucv-suspend.patch: iucv: add work_queue   cleanup for suspend (BNC#565612). - patches.arch/s390-05-04-zfcp-work-queue.patch: zfcp: Assign   scheduled work to driver queue (BNC#565612). - patches.arch/s390-05-05-zfcp-fail-commands.patch: zfcp: Don't   fail SCSI commands when transitioning to blocked fc_rport   (BNC#565612,LTC#58541). - patches.arch/s390-05-06-zfcp-adisc.patch: zfcp: Improve ELS   ADISC handling (BNC#565612). - patches.arch/s390-05-07-zfcp-fsf-errors.patch: zfcp: Update   FSF error reporting (BNC#565612). - patches.arch/s390-05-08-zfcp-block.diff: zfcp: Block SCSI EH   thread for rport state BLOCKED (BNC#565612). - patches.arch/s390-05-09-ctcm-suspend-wait.diff: ctcm: suspend   has to wait for outstanding I/O (BNC#565612). - patches.arch/s390-05-10-rework-tso.diff: qeth: rework TSO   functions (BNC#565612). - patches.arch/s390-05-11-atomic-volatile.patch: kernel: improve   code generated by atomic operations. (BNC#565612). - patches.arch/s390-05-12-tape-remove-fn.patch: tape: incomplete   device removal (BNC#565612). - patches.arch/s390-05-13-qeth-blkt-defaults.patch: qeth:   set default BLKT settings dependend on OSA hw level   (BNC#565612,LTC#58654). - patches.arch/s390-05-14-dasd-dasd-enable-prefix.patch: dasd:   enable prefix independent of pav support (BNC#565612). - patches.arch/s390-05-15-dasd-s390dbf-strings.patch: dasd:   remove strings from s390dbf (BNC#565612). - patches.arch/s390-05-16-dasd-wait-lcu-setup.patch: dasd:   let device initialization wait for LCU setup (BNC#565612).

--- a/series.conf
+++ b/series.conf
@@ -317,6 +317,23 @@
 
 	patches.suse/s390-Kerntypes.diff
 
+	patches.arch/s390-05-01-netiucv-tx-bytes.patch
+	patches.arch/s390-05-02-cmm-suspend.patch
+	patches.arch/s390-05-03-iucv-suspend.patch
+	patches.arch/s390-05-04-zfcp-work-queue.patch
+	patches.arch/s390-05-05-zfcp-fail-commands.patch
+	patches.arch/s390-05-06-zfcp-adisc.patch
+	patches.arch/s390-05-07-zfcp-fsf-errors.patch
+	patches.arch/s390-05-08-zfcp-block.diff
+	patches.arch/s390-05-09-ctcm-suspend-wait.diff
+	patches.arch/s390-05-10-rework-tso.diff
+	patches.arch/s390-05-11-atomic-volatile.patch
+	patches.arch/s390-05-12-tape-remove-fn.patch
+	patches.arch/s390-05-13-qeth-blkt-defaults.patch
+	patches.arch/s390-05-14-dasd-dasd-enable-prefix.patch
+	patches.arch/s390-05-15-dasd-s390dbf-strings.patch
+	patches.arch/s390-05-16-dasd-wait-lcu-setup.patch
+
         ########################################################
         # VM/FS patches
         ########################################################
