- patches.drivers/alsa-sp1-hda-{24..51}-*: 2.6.33-rc1 backport   fixes for HDMI and new Realtek codecs (FATE#306783) - Refresh Patch-mainline tags in patches.drivers/alsa-*

--- a/series.conf
+++ b/series.conf
@@ -908,6 +908,34 @@
 	patches.drivers/alsa-sp1-hda-21-hp-dv3-position-fix-quirk
 	patches.drivers/alsa-sp1-hda-22-alc888-exclude-unusable-adcs
 	patches.drivers/alsa-sp1-hda-23-hp-mute-led-gpio-fixes
+	patches.drivers/alsa-sp1-hda-24-keep-msi-on
+	patches.drivers/alsa-sp1-hda-25-add-power-counter
+	patches.drivers/alsa-sp1-hda-26-fix-hwdep-config-dependency
+	patches.drivers/alsa-sp1-hda-27-sony-vaio-use-default-auto
+	patches.drivers/alsa-sp1-hda-28-hdmi-fix-audio-infoframe-size
+	patches.drivers/alsa-sp1-hda-29-hdmi-fix-channel-mapping-slot
+	patches.drivers/alsa-sp1-hda-30-hdmi-export-monitor-presence
+	patches.drivers/alsa-sp1-hda-31-hdmi-add-jack-detect-helper
+	patches.drivers/alsa-sp1-hda-32-hdmi-probe-monitor-at-init
+	patches.drivers/alsa-sp1-hda-33-hdmi-separate-checksum-routine
+	patches.drivers/alsa-sp1-hda-34-hdmi-sticky-infoframe
+	patches.drivers/alsa-sp1-hda-35-hdmi-sticky-stream-id
+	patches.drivers/alsa-sp1-hda-36-sticky-channel-count
+	patches.drivers/alsa-sp1-hda-37-show-epps-capability-in-proc
+	patches.drivers/alsa-sp1-hda-38-acer-aspire-4930g-mute-fix
+	patches.drivers/alsa-sp1-hda-39-hdmi-show-hbr-pincap
+	patches.drivers/alsa-sp1-hda-40-hdmi-accept-DP-pin
+	patches.drivers/alsa-sp1-hda-41-hdmi-channel-mapping-pin
+	patches.drivers/alsa-sp1-hda-42-hdmi-add-chmap-configs
+	patches.drivers/alsa-sp1-hda-43-dont-power-off-hda-link
+	patches.drivers/alsa-sp1-hda-44-alc661-892-support
+	patches.drivers/alsa-sp1-hda-45-alc661-memleak-fix
+	patches.drivers/alsa-sp1-hda-46-realtek-slave-sws-fix
+	patches.drivers/alsa-sp1-hda-47-quirk-for-intel-d945-mobo
+	patches.drivers/alsa-sp1-hda-48-alc260-will-quirk-for-acer
+	patches.drivers/alsa-sp1-hda-49-more-alc663-fixes
+	patches.drivers/alsa-sp1-hda-50-alc88x-missing-capsrc_nids
+	patches.drivers/alsa-sp1-hda-51-fix-maxdata-obook4-quirk
 
 	########################################################
 	# Other driver fixes
