- patches.fixes/scsi_debug-scale-virtual_gb-with-sector_size-properly:   scsi_debug: scale virtual_gb with sector_size properly   (bnc#535939).

--- a/series.conf
+++ b/series.conf
@@ -654,6 +654,7 @@
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
 	patches.fixes/megaraid_sas-fix-permissions-on-poll_mode_io
+	patches.fixes/scsi_debug-scale-virtual_gb-with-sector_size-properly
 
 	########################################################
 	# DRM/Video
