- Update config files. - patches.drivers/cpufreq_ondemand_limit_fix.patch: cpufreq:   Fix ondemand to not request targets outside policy limits   (fate#306746). - patches.drivers/cpufreq_processor_clocking_control_pcc_driver.patch:   x86,cpufreq: Processor Clocking Control (PCC) driver   (fate#306746). - supported.conf:

--- a/series.conf
+++ b/series.conf
@@ -427,6 +427,10 @@
 #	patches.suse/cpuidle-documentation
 	patches.fixes/cpufreq_ondemand_performance_optimise_default_settings.patch
 
+	# PCC -> HP's cpufreq driver
+	patches.drivers/cpufreq_ondemand_limit_fix.patch
+	patches.drivers/cpufreq_processor_clocking_control_pcc_driver.patch
+
 	########################################################
 	# AGP, graphics related stuff
 	########################################################
