- patches.fixes/scsi-ipr-fix-eeh-recovery: ipr: fix EEH recovery   (bnc#566613).

--- a/series.conf
+++ b/series.conf
@@ -651,6 +651,7 @@
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
 	patches.fixes/megaraid_sas-fix-permissions-on-poll_mode_io
 	patches.fixes/scsi_debug-scale-virtual_gb-with-sector_size-properly
+	patches.fixes/scsi-ipr-fix-eeh-recovery
 
 	########################################################
 	# DRM/Video
