- patches.fixes/ia64-fix-sba-iommu-to-handle-allocation-failure-properly:   fix SBA IOMMU to handle allocation failure properly   (bnc#545367).

--- a/series.conf
+++ b/series.conf
@@ -155,6 +155,7 @@
 	patches.arch/ia64-page-migration
 	patches.arch/ia64-page-migration.fix
 	patches.fixes/taskstats-alignment
+	patches.fixes/ia64-fix-sba-iommu-to-handle-allocation-failure-properly
 
         ########################################################
 	# i386
