- patches.fixes/ppc-crashdump-typefix: powerpc: use min_t in   copy_oldmem_page.

--- a/series.conf
+++ b/series.conf
@@ -267,6 +267,7 @@
 	patches.arch/ppc-extended_h_cede-node_offline_online_cpus
 	patches.arch/ppc-extended_h_cede-add_driver_lock
 	patches.fixes/powerpc-fix-cpu-name-in-show-cpuinfo
+	patches.fixes/ppc-crashdump-typefix
 
         ########################################################
         # PS3
