- patches.arch/bug-561989_gru_rollup.patch: SGI GRU Updates   (bnc#561989, fate#306952).

--- a/series.conf
+++ b/series.conf
@@ -228,6 +228,7 @@
 	patches.arch/bug-561946_uv_use_rtc.patch
 	patches.arch/bug-561946_uv_irq_affinity.patch
 	patches.arch/bug-561946_uv_move_ioapic.patch
+	patches.arch/bug-561989_gru_rollup.patch
 
         ########################################################
 	# powerpc/generic
