- patches.arch/xpc_first_contact_when_active.patch: X86: UV   - xpc_make_first_contact hang due to not accepting ACTIVE   state. (bnc#562288, fate#306952). - patches.arch/xpc_fix_xpc_get_fifo_entry_uv.patch: x86: UV - XPC   NULL deref when mesq becomes empty. (bnc#562288, fate#306952). - patches.arch/xpc_introduce_xp_socket.patch: x86: UV - XPC   needs to provide an abstraction for uv_gpa. (bnc#562288,   fate #306952). - patches.arch/xpc_pass_nasid_to_gru_create_message_queue.patch:   UV - pass nasid instead of nid to gru_create_message_queue   (bnc#562288, fate#306952). - patches.arch/xpc_recv_msg_slots_wrap.patch: X86: UV - XPC   receive message reuse triggers invalid BUG_ON(). (bnc#562288,   fate#306952). - patches.arch/xpc_uv_bios_changes.patch: x86: UV - Update XPC   to handle updated BIOS interface. (bnc#562288, fate#306952).

--- a/series.conf
+++ b/series.conf
@@ -230,6 +230,14 @@
 	patches.arch/bug-561946_uv_move_ioapic.patch
 	patches.arch/bug-561989_gru_rollup.patch
 
+	# bug 562288
+	patches.arch/xpc_introduce_xp_socket.patch
+	patches.arch/xpc_uv_bios_changes.patch
+	patches.arch/xpc_fix_xpc_get_fifo_entry_uv.patch
+	patches.arch/xpc_first_contact_when_active.patch
+	patches.arch/xpc_recv_msg_slots_wrap.patch
+	patches.arch/xpc_pass_nasid_to_gru_create_message_queue.patch
+
         ########################################################
 	# powerpc/generic
         ########################################################
