--- a/series.conf
+++ b/series.conf
@@ -970,6 +970,7 @@
 	patches.drivers/alsa-sp1-hda-49-more-alc663-fixes
 	patches.drivers/alsa-sp1-hda-50-alc88x-missing-capsrc_nids
 	patches.drivers/alsa-sp1-hda-51-fix-maxdata-obook4-quirk
+	patches.drivers/alsa-sp1-hda-52-hdmi-sticky-stream-tag
 
 	########################################################
 	# Other driver fixes
