- patches.fixes/dmar-fix-oops-with-no-dmar-table: dmar: Fix oops   with no DMAR table (bnc#548108).

--- a/series.conf
+++ b/series.conf
@@ -190,6 +190,7 @@
 	patches.arch/x86-64-align-rodata-kernel-section-to-2mb-with-config_debug_rodata
 	patches.arch/x86-64-add-comment-for-rodata-large-page-retainment
 	patches.suse/x86-mark_rodata_rw.patch
+	patches.fixes/dmar-fix-oops-with-no-dmar-table
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
