- patches.fixes/nfs-fix-NFS4ERR_FILE_OPEN-handling:   NFS4ERR_FILE_OPEN handling in Linux/NFS (bnc#526819).

--- a/series.conf
+++ b/series.conf
@@ -476,6 +476,8 @@
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
 	patches.fixes/nfsd-09-fix-kabi
+
+	patches.fixes/nfs-fix-NFS4ERR_FILE_OPEN-handling
 	########################################################
 	# lockd + statd
 	########################################################
