- patches.drivers/drm-i915-add-acpi-opregion-support-for-ironlake.patch:   drm/i915: Add ACPI OpRegion support for Ironlake (bnc#568436).

--- a/series.conf
+++ b/series.conf
@@ -678,6 +678,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.drivers/drm-i915-add-acpi-opregion-support-for-ironlake.patch
 
 	########################################################
 	# Network
