- patches.drivers/drm-i915-add-acpi-opregion-support-for-ironlake.patch:   Refresh. - patches.drivers/drm-i915-add-i915_lp_ring_sync-helper.patch:   drm/i915: add i915_lp_ring_sync helper (bnc#568447). - patches.drivers/drm-i915-fix-get_core_clock_speed-for-g33-class-desktop-chips.patch:   drm/i915: fix get_core_clock_speed for G33 class desktop chips   (bnc#568447). - patches.drivers/drm-i915-fully-switch-off-overlay-when-not-in-use.patch:   drm/i915: fully switch off overlay when not in use (bnc#568447). - patches.drivers/drm-i915-implement-drmmode-overlay-support-v4.patch:   drm/i915: implement drmmode overlay support v4 (bnc#568447). - patches.drivers/drm-i915-implement-fastpath-for-overlay-flip-waiting.patch:   drm/i915: implement fastpath for overlay flip waiting   (bnc#568447).

--- a/series.conf
+++ b/series.conf
@@ -678,6 +678,11 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.drivers/drm-i915-add-i915_lp_ring_sync-helper.patch
+	patches.drivers/drm-i915-implement-drmmode-overlay-support-v4.patch
+	patches.drivers/drm-i915-fully-switch-off-overlay-when-not-in-use.patch
+	patches.drivers/drm-i915-implement-fastpath-for-overlay-flip-waiting.patch
+	patches.drivers/drm-i915-fix-get_core_clock_speed-for-g33-class-desktop-chips.patch
 	patches.drivers/drm-i915-add-acpi-opregion-support-for-ironlake.patch
 
 	########################################################
