- patches.fixes/PCIe-AER-reject-aer-inject-if-hardware-mask-error-reporting.patch:   PCIe AER: reject aer inject if hardware mask error reporting   (bnc#566621).

--- a/series.conf
+++ b/series.conf
@@ -898,6 +898,7 @@
 	########################################################
 	# PCI and PCI hotplug
 	########################################################
+	patches.fixes/PCIe-AER-reject-aer-inject-if-hardware-mask-error-reporting.patch
 
 	########################################################
 	# sysfs / driver core
